Add deletion for user cache
